--- a/final/references.bib
+++ b/final/references.bib
@@ -168,6 +168,16 @@
   pages={101--144}
 }
 
+@article{wang,
+  author={Wang, Chung C.},
+  title={An Algorithm for the Chromatic Number of a Graph},
+  journal={Journal of the Association for Computer Machinery},
+  volume={21},
+  number={3},
+  year={1974},
+  pages={385--391}
+}
+
 @book{west,
   author={West, Douglas B.},
   title={Introduction to Graph Theory},
