--- a/final/references.bib
+++ b/final/references.bib
@@ -108,6 +108,17 @@
   pages={209--238}
 }
 
+@incollection{matula,
+  author={Matula, David W. and Marble, George and Isaacson, Joel D.},
+  title={Graph Coloring Algorithms},
+  booktitle={Graph Theory and Computing},
+  editor={Read, Ronald C.},
+  publisher={Academic Press},
+  address={New York},
+  year={1972},
+  pages={109-122}
+}
+
 @article{mcdiarmid,
   author={McDiarmid, Colin},
   title={Determining the Chromatic Number of a Graph},
@@ -178,6 +189,16 @@
   pages={385--391}
 }
 
+@article{welsh,
+  author={Welsh, D.J.A. and Powell, M.B.},
+  title={An Upper Bound for the Chromatic Number of a Graph and its Application to Timetabling Problems},
+  journal={The Computer Journal},
+  volume={10},
+  number={1},
+  year={1967},
+  pages={85--86}
+}
+
 @book{west,
   author={West, Douglas B.},
   title={Introduction to Graph Theory},
@@ -211,16 +232,6 @@
   volume={7},
   year={1949 (translated 1952)},
   pages={418--449}
-}
-
-@article{myers,
-  author={Myers, B.R. and Liu, R},
-  title={A Lower Bound on the Chromatic Number of a Graph},
-  journal={Networks},
-  volume={1},
-  publisher={John Wiley and Sons, Inc},
-  year={1972},
-  pages={273--277}
 }
 
 @article{voloshin,
