--- a/final/local.tex
+++ b/final/local.tex
@@ -4,6 +4,7 @@
 \usepackage{mathtools}
 \usepackage{mathrsfs}
 \usepackage{graphtheory}
+\usepackage{cancel}
 \usetikzlibrary{arrows}
 \usepackage{flowchart}
 \newtheorem{proposition}{Proposition}
